# hs-rgfw

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  Setup.hs  cabal.project  flake.nix  generate.sh  hs-rgfw.cabal  package.nix
include/: RGFW.h  RGFW_HS.c  RGFW_HS.h
lib/: Lib.hs  Main.hs  RGFW.h  RGFW.hsc  RGFW_HS.h
scripts/: delete-generated.sh  generate.sh
src/: LoadShaders.hs  Main.hs
