cabal-version:      3.0
name:               hs-rgfw
version:            0.2.2
homepage:           https://git.mtgmonkey.net/Andromeda/hs-rgfw
license:            BSD-3-Clause
license-file:       LICENSE
author:             andromeda
maintainer:         @andromeda:tchncs.de
category:           Development
build-type:         Simple
extra-doc-files: CHANGELOG.md
-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
common warnings
    ghc-options:
        -Wall
common buildc
    include-dirs:
        include,
        include/RGFW
    c-sources: include/RGFW_HS.c
    install-includes:
        RGFW_HS.c
common pkgconfig
    pkgconfig-depends:
        gl,
        x11,
        xcursor,
        xrandr,
        xi
common default-language
    default-language: Haskell2010
library
    import:
        warnings,
        buildc,
        pkgconfig,
        default-language
    exposed-modules: RGFW
    build-depends:
        base >=4.18,
        bindings-DSL <1000
    hs-source-dirs: lib
executable hs-rgfw
    import:
        warnings,
        buildc,
        pkgconfig,
        default-language
    main-is: Main.hs
    build-depends:
        base >=4.18,
        hs-rgfw
    hs-source-dirs: src
