cabal-version: 3.0
name: hs-rgfw
version: 0.1.0
license: GPL-3.0-only
license-file: LICENSE
author: Andromeda
maintainer: Matrix @andromeda:tchncs.de
build-type: Simple
extra-doc-files: README.md
common warnings
  ghc-options: -Wall

library
  import: warnings
  -- hs-bindgen-cli uses --single-file flag, so no other modules
  exposed-modules: RGFW.Generated
  build-depends:
    , base
    , primitive
    , c-expr-runtime
    , hs-bindgen-runtime
  pkgconfig-depends:
    , gl
    , x11
    , xcursor
    , xrandr
    , xi
  include-dirs: lib/include
  hs-source-dirs: lib
  default-language: Haskell2010
  default-extensions: FlexibleInstances
  -- options for RGFW passed here
  ghc-options:
    -optc-DRGFW_OPENGL
    -optc-DRGFW_EXPORT
  c-sources: lib/RGFW.c

executable hs-rgfw
  import: warnings
  main-is: Main.hs
  build-depends:
    , base
    , bytestring
    , c-expr-runtime
    , hs-bindgen-runtime
    , hs-rgfw
    , OpenGL
  pkgconfig-depends:
    , gl
    , x11
    , xcursor
    , xrandr
    , xi
  include-dirs: lib/include
  hs-source-dirs: src
  default-language: Haskell2010
